[project]
dependencies = []
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=6.0.0",
  "mypy>=1.2.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "pyclean>=2.7.0",
]
src = [
  "-e file:///${PROJECT_ROOT}/src/examples-gcloud#egg=examples-gcloud",
  "-e file:///${PROJECT_ROOT}/src/examples-playweight#egg=examples-playweight",
  "-e file:///${PROJECT_ROOT}/src/examples-selenium#egg=examples-selenium",
]

[tool.pdm.scripts]
build = {shell = "for proj in src/*/pyproject.toml; do (pdm build -p \"$(dirname $proj)\" ); done"}
clean = {shell = "for proj in src/*/pyproject.toml; do (cd \"$(dirname $proj)\"; pdm run clean ); done"}
format = {shell = "for proj in src/*/pyproject.toml; do (cd \"$(dirname $proj)\"; pdm run format ); done"}
lint = {shell = "for proj in src/*/pyproject.toml; do (cd \"$(dirname $proj)\"; pdm run lint ); done"}
