
[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = [
  "gspread>=5.9.0",
  "google-api-python-client>=2.87.0",
  "google-auth>=2.19.0",
  "google-auth-oauthlib>=1.0.0",
  "pyyaml>=6.0",
]
description = ""
dynamic = ["version"]
license = {text = "MIT"}
name = "examples-gcloud"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
examples-gcloud-cli = "examples_gcloud.console.command:main"

[tool.pdm]
version = {source = "file", path = "examples_gcloud/__init__.py"}

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=6.0.0",
  "mypy>=1.3.0",
  "black>=23.3.0",
  "isort>=5.12.0",
  "pytest-cov>=4.1.0",
  "pyclean>=2.7.3",
]

[tool.pdm.scripts]
clean = {composite = ["pyclean .", "clean_dirs"]}
clean_dirs = {shell = "find . | grep -E \"(/__pycache__$|\\.pyc$|\\.pyo$|/build$|/dist$|\\..+_cache$)\" | xargs rm -rf"}
format = {composite = ["isort .", "black ."]}
lint = {composite = ["flake8", "mypy ."]}
test = "pytest --cov=. --cov-branch --cov-report xml"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
## Import discovery
files = []

## Platform configuration
python_version = 3.11

## Disallow dynamic typing
disallow_subclassing_any = true

## Untyped definitions and call
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

## None and Optional handling
no_implicit_optional = true
strict_optional = true

## Configuring warnings
#warn_unreachable = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

## Suppressing errors

## Miscellaneous strictness flags
#no_implicit_reexport = true
allow_redefinition = true
local_partial_types = true
strict = true
strict_equality = true

## Configuring error messages
pretty = true
show_error_context = true

[[mypy.overrides]]
ignore_missing_imports = true
module = []
